Enhance GN'EXT CLI tool with configuration updates and script generation
- Update .gitignore to include local GN'EXT files.
- Modify package.json to specify author, repository, homepage, and bugs URL.
- Refactor setup command in src/commands/setup.ts to generate development and VM setup scripts dynamically.
- Remove hardcoded script content in favor of utility functions for better maintainability.

--- a/package.json
+++ b/package.json
@@ -21,10 +21,20 @@
     "gnome-shell",
     "extension",
     "cli",
-    "development"
+    "development",
+    "typescript",
+    "linux"
   ],
-  "author": "",
+  "author": "GN'EXT Contributors",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dagimg-dot/gnext.git"
+  },
+  "homepage": "https://github.com/dagimg-dot/gnext#readme",
+  "bugs": {
+    "url": "https://github.com/dagimg-dot/gnext/issues"
+  },
   "dependencies": {
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
