--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gnext",
+  "name": "@dagimg-dot/gnext",
   "version": "0.1.0",
   "description": "An all-in-one CLI tool to create and develop GNOME Extensions",
   "type": "module",
   "bin": {
-    "gnext": "./dist/cli.js"
+    "gnext": "dist/cli.js"
   },
   "files": [
     "dist",
@@ -29,7 +29,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/dagimg-dot/gnext.git"
+    "url": "git+https://github.com/dagimg-dot/gnext.git"
   },
   "homepage": "https://github.com/dagimg-dot/gnext#readme",
   "bugs": {
@@ -52,4 +52,3 @@
     "node": ">=18.0.0"
   }
 }
-
