--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "bun build src/cli.ts --outdir dist --target node --format esm",
     "dev": "bun run build --watch",
     "prepublishOnly": "bun run build",
-    "check": "biome check src --write"
+    "check": "biome check src --write",
+    "publish": "bun publish --access public"
   },
   "keywords": [
     "gnome",
@@ -43,10 +44,10 @@
     "ora": "^9.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.2",
     "@types/bun": "latest",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.13.10",
-    "@biomejs/biome": "2.3.2"
+    "@types/node": "^22.13.10"
   },
   "engines": {
     "node": ">=18.0.0"
